--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "url": "https://github.com/CRAlpha/react-native-wkwebview/issues"
   },
   "dependencies": {
+    "events": "^1.1.1",
     "fbjs": "^0.8.3"
   },
   "description": "React Native WKWebView for iOS",
